fix animation on page load, banners z-index

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,7 +22,7 @@
 @layer components {
   .home-block {
     @apply flex flex-col justify-center items-center border-white border-opacity-20 gap-3
-    hover:bg-white hover:scale-105 transition-all ease-in-out duration-500 h-full w-full relative overflow-hidden;
+    hover:bg-white hover:scale-105 transition-all ease-in-out duration-500 h-full w-full relative overflow-hidden z-10 hover:z-20;
   }
   .undermaintenance {
     @apply absolute top-6 right-[-1.5rem] w-28 rotate-45;
